adding new experience pages

--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
     <section id="experience">
         <h1>My experience in Computer Science</h1>
         <div class="experience">
-            <a href="transcript.pdf" class="experience-tile">
-                <img src="./iwulogo.jpeg" alt="">
+            <a href="./assets/transcript.pdf" class="experience-tile">
+                <img src="./assets/iwulogo.jpeg" alt="">
                 <p><span>&lt;</span>Undergraduate CS degree<span>/&gt;</span></p>
             </a>
-            <a href="#" class="experience-tile">
-                <img src="./cs.jpeg" alt="">
+            <a href="./csta.html" class="experience-tile">
+                <img src="./assets/cs.jpeg" alt="">
                 <p><span>&lt;</span>CS Teaching Assistant<span>/&gt;</span></p>
+            </a>
+            <a href="./gamedev.html" class="experience-tile">
+                <img src="./assets/controller.webp" alt="">
+                <p><span>&lt;</span>Game Development<span>/&gt;</span></p>
+            </a>
+            <a href="./socialmedia.html" class="experience-tile">
+                <img src="./assets/TheSocialNetwork.png" alt="">
+                <p><span>&lt;</span>Social Media App<span>/&gt;</span></p>
             </a>
         </div>
         <a href="resume.html" class="resume">
