--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                 <img src="./assets/TheSocialNetwork.png" alt="">
                 <p><span>&lt;</span>Social Media App<span>/&gt;</span></p>
             </a>
+            <a href="./aimbot.html" class="experience-tile">
+                <img src="./assets/aimbot.png" alt="">
+                <p><span>&lt;</span>Counter Strike Aimbot<span>/&gt;</span></p>
+            </a>
+            <a href="./" class="experience-tile">
+                <img src="./assets/cpu.png" alt="">
+                <p><span>&lt;</span>Custom CPU<span>/&gt;</span></p>
+            </a>
         </div>
         <a href="resume.html" class="resume">
             View My Resume <i class="ri-arrow-drop-right-line ri-2x"> </i>
