--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <img src="./assets/cs.jpeg" alt="">
                 <p><span>&lt;</span>CS Teaching Assistant<span>/&gt;</span></p>
             </a>
+            <a href="./btg.html" class="experience-tile">
+                <img src="./assets/btg-logo.jpg" alt="">
+                <p><span>&lt;</span>Brick Technology<span>/&gt;</span></p>
+            </a>
             <a href="./gamedev.html" class="experience-tile">
                 <img src="./assets/controller.webp" alt="">
                 <p><span>&lt;</span>Game Development<span>/&gt;</span></p>
@@ -54,13 +58,14 @@
             </a>
             <a href="./aimbot.html" class="experience-tile">
                 <img src="./assets/aimbot.png" alt="">
-                <p><span>&lt;</span>Counter Strike Aimbot<span>/&gt;</span></p>
+                <p><span>&lt;</span>Player Detection System<span>/&gt;</span></p>
             </a>
-            <a href="./" class="experience-tile">
+            <a href="./cpu.html" class="experience-tile">
                 <img src="./assets/cpu.png" alt="">
                 <p><span>&lt;</span>Custom CPU<span>/&gt;</span></p>
             </a>
         </div>
+        
         <a href="resume.html" class="resume">
             View My Resume <i class="ri-arrow-drop-right-line ri-2x"> </i>
         </a>
