added an message page for pages that aren't up yet

--- a/index.html
+++ b/index.html
@@ -36,34 +36,46 @@
     <section id="experience">
         <h1>My experience in Computer Science</h1>
         <div class="experience">
+
             <a href="./assets/transcript.pdf" class="experience-tile">
                 <img src="./assets/iwulogo.jpeg" alt="">
                 <p><span>&lt;</span>Undergraduate CS degree<span>/&gt;</span></p>
             </a>
+
             <a href="./csta.html" class="experience-tile">
                 <img src="./assets/cs.jpeg" alt="">
                 <p><span>&lt;</span>CS Teaching Assistant<span>/&gt;</span></p>
             </a>
-            <a href="./btg.html" class="experience-tile">
+
+            <!--<a href="./btg.html" class="experience-tile">-->
+            <a href="./oops.html" class="experience-tile">
                 <img src="./assets/btg-logo.jpg" alt="">
                 <p><span>&lt;</span>Brick Technology<span>/&gt;</span></p>
             </a>
-            <a href="./gamedev.html" class="experience-tile">
+
+            <!--<a href="./gamedev.html" class="experience-tile">-->
+            <a href="./oops.html" class="experience-tile">
                 <img src="./assets/controller.webp" alt="">
                 <p><span>&lt;</span>Game Development<span>/&gt;</span></p>
             </a>
-            <a href="./socialmedia.html" class="experience-tile">
+
+            <!--<a href="./socialmedia.html" class="experience-tile">-->
+            <a href="./oops.html" class="experience-tile">
                 <img src="./assets/TheSocialNetwork.png" alt="">
                 <p><span>&lt;</span>Social Media App<span>/&gt;</span></p>
             </a>
+
             <a href="./aimbot.html" class="experience-tile">
                 <img src="./assets/aimbot.png" alt="">
                 <p><span>&lt;</span>Player Detection System<span>/&gt;</span></p>
             </a>
-            <a href="./cpu.html" class="experience-tile">
+
+            <!--<a href="./cpu.html" class="experience-tile">-->
+            <a href="./oops.html" class="experience-tile">
                 <img src="./assets/cpu.png" alt="">
                 <p><span>&lt;</span>Custom CPU<span>/&gt;</span></p>
             </a>
+
         </div>
         
         <a href="resume.html" class="resume">
