added content to gamedev page and fixed some alignment/scaling issues of videos and tables

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <p><span>&lt;</span>Brick Technology<span>/&gt;</span></p>
             </a>
 
-            <!--<a href="./gamedev.html" class="experience-tile">-->
-            <a href="./oops.html" class="experience-tile">
+            <a href="./gamedev.html" class="experience-tile">
+            <!--<a href="./oops.html" class="experience-tile">-->
                 <img src="./assets/controller.webp" alt="">
                 <p><span>&lt;</span>Game Development<span>/&gt;</span></p>
             </a>
