--- a/gamedev.html
+++ b/gamedev.html
@@ -96,7 +96,7 @@
 
 <!-- Video Section -->
 <div class="content-container">
-    <video class="center" autoplay loop muted>
+    <video class="center" autoplay loop muted playsinline controls>
         <source src="./assets/multiplayer_game_demo.mov" type="video/quicktime">
         Your browser does not support the video tag.
     </video>
