--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section id="experience">
         <h1>My experience in Computer Science</h1>
         <div class="experience">
-            <a href="./assets/transcript.pdf" class="experience-tile">
+            <a href="./iwu.html" class="experience-tile">
                 <img src="./assets/iwulogo.jpeg" alt="">
                 <p><span>&lt;</span>Undergraduate CS degree<span>/&gt;</span></p>
             </a>
@@ -146,7 +146,11 @@
                 <img src="./assets/cs.jpeg" alt="">
                 <p><span>&lt;</span>CS Teaching Assistant<span>/&gt;</span></p>
             </a>
-            <a href="./btg.html" class="experience-tile">
+            <a href="./MLE.html" class="experience-tile">
+                <img src="./assets/Neural_net.png" alt="">
+                <p><span>&lt;</span>Machine Learning Engineer<span>/&gt;</span></p>
+            </a>
+            <a href="./oops.html" class="experience-tile">
                 <img src="./assets/btg-logo.jpg" alt="">
                 <p><span>&lt;</span>Brick Technology<span>/&gt;</span></p>
             </a>
@@ -158,11 +162,11 @@
                 <img src="./assets/aimbot.png" alt="">
                 <p><span>&lt;</span>Player Detection System<span>/&gt;</span></p>
             </a>
-            <a href="./oops.html" class="experience-tile">
+            <a href="./socialmedia.html" class="experience-tile">
                 <img src="./assets/TheSocialNetwork.png" alt="">
                 <p><span>&lt;</span>Social Media App<span>/&gt;</span></p>
             </a>
-            <a href="./cpu.html" class="experience-tile">
+            <a href="./oops.html" class="experience-tile">
                 <img src="./assets/cpu.png" alt="">
                 <p><span>&lt;</span>Custom CPU<span>/&gt;</span></p>
             </a>
