updates to file structure for organization

--- a/pages/aimbot.html
+++ b/pages/aimbot.html
@@ -110,7 +110,7 @@
 <!-- Video Section -->
 <div class="content-container">
     <video class="center" autoplay loop muted playsinline controls>
-        <source src="./assets/aimbot_demo.mp4" type="video/mp4">
+        <source src="../assets/aimbot_demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
@@ -204,7 +204,7 @@
 
 <div class="table-container">
   <h2><center>Custom Model Architecture</center></h2>
-  <img src="./assets/nnab_table.png" alt="Custom Model Architecture" class="responsive-table-image">
+  <img src="../assets/nnab_table.png" alt="Custom Model Architecture" class="responsive-table-image">
 </div>
 
 </body>
