--- a/pages/socialmedia.html
+++ b/pages/socialmedia.html
@@ -43,10 +43,10 @@
 </div>
 
 <div class="content-container">
-    <img style='height: 100%; width: 100%; object-fit: contain' src="assets/TheScocialNetwork/TSN_home.png" alt="">
-    <img style='height: 100%; width: 100%; object-fit: contain' src="assets/TheScocialNetwork/TSN_login.png" alt="">
-    <img style='height: 100%; width: 100%; object-fit: contain' src="assets/TheScocialNetwork/TSN_profile.png" alt="">
-    <img style='height: 100%; width: 100%; object-fit: contain' src="assets/TheScocialNetwork/TSN_emptyHome.png" alt="">
+    <img style='height: 100%; width: 100%; object-fit: contain' src="../assets/TheScocialNetwork/TSN_home.png" alt="">
+    <img style='height: 100%; width: 100%; object-fit: contain' src="../assets/TheScocialNetwork/TSN_login.png" alt="">
+    <img style='height: 100%; width: 100%; object-fit: contain' src="../assets/TheScocialNetwork/TSN_profile.png" alt="">
+    <img style='height: 100%; width: 100%; object-fit: contain' src="../assets/TheScocialNetwork/TSN_emptyHome.png" alt="">
 </div>
 
 </body>
