--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
     </script>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="./styles.css"> <!-- Assuming you have external styles -->
+    <link rel="stylesheet" href="./styles.css">
 
     <!-- Inline Styles to prevent conflict -->
     <style>
@@ -139,35 +139,35 @@
         <h1>My experience in Computer Science</h1>
         <div class="experience">
             <a href="./iwu.html" class="experience-tile">
-                <img src="./assets/iwulogo.jpeg" alt="">
+                <img src="../assets/iwulogo.jpeg" alt="">
                 <p><span>&lt;</span>Undergraduate CS degree<span>/&gt;</span></p>
             </a>
             <a href="./csta.html" class="experience-tile">
-                <img src="./assets/cs.jpeg" alt="">
+                <img src="../assets/cs.jpeg" alt="">
                 <p><span>&lt;</span>CS Teaching Assistant<span>/&gt;</span></p>
             </a>
             <a href="./MLE.html" class="experience-tile">
-                <img src="./assets/Neural_net.png" alt="">
+                <img src="../assets/Neural_net.png" alt="">
                 <p><span>&lt;</span>Machine Learning Engineer<span>/&gt;</span></p>
             </a>
             <a href="./oops.html" class="experience-tile">
-                <img src="./assets/btg-logo.jpg" alt="">
+                <img src="../assets/btg-logo.jpg" alt="">
                 <p><span>&lt;</span>Brick Technology<span>/&gt;</span></p>
             </a>
             <a href="./gamedev.html" class="experience-tile">
-                <img src="./assets/controller.webp" alt="">
+                <img src="../assets/controller.webp" alt="">
                 <p><span>&lt;</span>Game Development<span>/&gt;</span></p>
             </a>
             <a href="./aimbot.html" class="experience-tile">
-                <img src="./assets/aimbot.png" alt="">
+                <img src="../assets/aimbot.png" alt="">
                 <p><span>&lt;</span>Player Detection System<span>/&gt;</span></p>
             </a>
             <a href="./socialmedia.html" class="experience-tile">
-                <img src="./assets/TheSocialNetwork.png" alt="">
+                <img src="../assets/TheSocialNetwork.png" alt="">
                 <p><span>&lt;</span>Social Media App<span>/&gt;</span></p>
             </a>
             <a href="./oops.html" class="experience-tile">
-                <img src="./assets/cpu.png" alt="">
+                <img src="../assets/cpu.png" alt="">
                 <p><span>&lt;</span>Custom CPU<span>/&gt;</span></p>
             </a>
         </div>
