--- a/pages/resume.html
+++ b/pages/resume.html
@@ -7,6 +7,6 @@
     <title>Kyle Pish - Resume</title>
 </head>
 <body id="resume-body">
-    <embed src="./assets/resume.pdf" width="800px" height="2100px" />
+    <embed src="../assets/resume.pdf" width="800px" height="2100px" />
 </body>
 </html>
